@@ -30,6 +30,7 @@
 22. Allow up to 5 custom defined gradients.
 23. Allow custom shades to be specified.
 24. Enable shadow for HTML and krunner.
+25. Add option to specify active tab appearance.
 
 0.58
 ----
